--- a/package/Samples/Scripts/LayerGroup.uxml
+++ b/package/Samples/Scripts/LayerGroup.uxml
@@ -1,8 +1,18 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-direction: row;">
-        <ui:Toggle name="visible" style="-unity-text-align: middle-left;" />
-        <ui:Label text="Label" display-tooltip-when-elided="true" name="name" style="width: 120px; -unity-text-align: middle-left; height: 64px;" />
-        <ui:VisualElement name="texture" style="height: 64px; width: 64px; flex-direction: row;" />
+    <ui:VisualElement style="flex-direction: column;">
+        <ui:VisualElement name="textureLine" style="flex-direction: row; width: 20px;">
+            <ui:Toggle name="visible" binding-path="visible" style="-unity-text-align: middle-left; width: 20px;" />
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="name" binding-path="name" enable-rich-text="false" style="width: 120px; -unity-text-align: middle-left; height: 64px;" />
+            <ui:Image name="image" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-height: 64px; min-width: 64px;" />
+            <ui:Image name="mask" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-width: 64px; min-height: 64px; margin-left: 2px;" />
+            <ui:VisualElement name="rects" style="justify-content: center;">
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="maskRect" style="-unity-text-align: middle-left;" />
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="imageRect" style="-unity-text-align: middle-left;" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement name="extraLine" style="flex-direction: row; margin-left: 26px;">
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="extra" binding-path="name" enable-rich-text="false" style="-unity-text-align: middle-left;" />
+        </ui:VisualElement>
     </ui:VisualElement>
-    <ui:Foldout text="Layers" style="margin-left: 25px;" />
+    <ui:Foldout text="Layers" name="childLayers" style="width: 64px; height: 64px;" />
 </ui:UXML>
