--- a/package/Samples/Scripts/PsdFile.uxml
+++ b/package/Samples/Scripts/PsdFile.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:Label text="Label" display-tooltip-when-elided="true" name="filename" />
+    <ui:VisualElement name="imageStack" style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgba(0, 0, 0, 0.5); border-right-color: rgba(0, 0, 0, 0.5); border-top-color: rgba(0, 0, 0, 0.5); border-bottom-color: rgba(0, 0, 0, 0.5);" />
     <ui:ScrollView />
     <ui:Label text="End of file." display-tooltip-when-elided="true" name="file-end" />
 </ui:UXML>
