--- a/package/Samples/UI/LayerGroup.uxml
+++ b/package/Samples/UI/LayerGroup.uxml
@@ -2,17 +2,18 @@
     <ui:VisualElement style="flex-direction: column;">
         <ui:VisualElement name="textureLine" style="flex-direction: row; width: 20px;">
             <ui:Toggle name="visible" binding-path="visible" style="-unity-text-align: middle-left; width: 20px;" />
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="name" binding-path="name" enable-rich-text="false" style="width: 120px; -unity-text-align: middle-left; height: 64px;" />
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="name" binding-path="name" enable-rich-text="false" style="width: 180px; -unity-text-align: middle-left; height: 64px; -unity-font-style: bold;" />
             <ui:Image name="image" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-height: 64px; min-width: 64px; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgba(0, 0, 0, 0.33); border-right-color: rgba(0, 0, 0, 0.33); border-top-color: rgba(0, 0, 0, 0.33); border-bottom-color: rgba(0, 0, 0, 0.33);" />
             <ui:Image name="mask" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-width: 64px; min-height: 64px; margin-left: 2px; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgba(0, 0, 0, 0.33); border-right-color: rgba(0, 0, 0, 0.33); border-top-color: rgba(0, 0, 0, 0.33); border-bottom-color: rgba(0, 0, 0, 0.33);" />
-            <ui:VisualElement name="rects" style="justify-content: center;">
-                <ui:Label text="Label" display-tooltip-when-elided="true" name="maskRect" style="-unity-text-align: middle-left;" />
-                <ui:Label text="Label" display-tooltip-when-elided="true" name="imageRect" style="-unity-text-align: middle-left;" />
+            <ui:VisualElement name="rects" style="justify-content: center; margin-left: 4px;">
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="maskRect" style="-unity-text-align: middle-left; font-size: 10px; color: rgba(210, 210, 210, 0.8);" />
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="imageRect" style="-unity-text-align: middle-left; font-size: 10px; color: rgba(210, 210, 210, 0.8);" />
             </ui:VisualElement>
         </ui:VisualElement>
-        <ui:VisualElement name="extraLine" style="flex-direction: row; margin-left: 26px;">
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="extra" binding-path="name" enable-rich-text="false" style="-unity-text-align: middle-left;" />
-        </ui:VisualElement>
+        <ui:Foldout text="Attributes" name="Foldout" style="margin-left: 27px; margin-top: -20px; color: rgba(210, 210, 210, 0.8);">
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="extra" binding-path="name" enable-rich-text="false" style="margin-left: 10px; font-size: 10px; color: rgba(210, 210, 210, 0.8); margin-bottom: 4px;" />
+        </ui:Foldout>
     </ui:VisualElement>
-    <ui:Foldout text="Layers" name="childLayers" />
+    <ui:Foldout text="Layers" name="childLayers" style="margin-left: 26px; border-left-width: 1px; border-left-color: rgba(0, 0, 0, 0.2);" />
+    <ui:VisualElement name="spacer" style="height: 0; margin-bottom: 4px;" />
 </ui:UXML>
