--- a/package/Samples/UI/LayerGroup.uxml
+++ b/package/Samples/UI/LayerGroup.uxml
@@ -1,17 +1,17 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-direction: column;">
+    <ui:VisualElement name="layerSettings" style="flex-direction: column; border-left-width: 8px; border-left-color: rgb(255, 255, 255);">
         <ui:VisualElement name="textureLine" style="flex-direction: row; width: 20px;">
             <ui:Toggle name="visible" binding-path="visible" style="-unity-text-align: middle-left; width: 20px;" />
             <ui:Label text="Label" display-tooltip-when-elided="true" name="name" binding-path="name" enable-rich-text="false" style="width: 180px; -unity-text-align: middle-left; height: 64px; -unity-font-style: bold;" />
             <ui:Image name="image" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-height: 64px; min-width: 64px; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgba(0, 0, 0, 0.33); border-right-color: rgba(0, 0, 0, 0.33); border-top-color: rgba(0, 0, 0, 0.33); border-bottom-color: rgba(0, 0, 0, 0.33);" />
             <ui:Image name="mask" style="height: 64px; width: 64px; max-width: 64px; max-height: 64px; min-width: 64px; min-height: 64px; margin-left: 2px; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-left-color: rgba(0, 0, 0, 0.33); border-right-color: rgba(0, 0, 0, 0.33); border-top-color: rgba(0, 0, 0, 0.33); border-bottom-color: rgba(0, 0, 0, 0.33);" />
-            <ui:VisualElement name="rects" style="justify-content: center; margin-left: 4px;">
-                <ui:Label text="Label" display-tooltip-when-elided="true" name="maskRect" style="-unity-text-align: middle-left; font-size: 10px; color: rgba(210, 210, 210, 0.8);" />
-                <ui:Label text="Label" display-tooltip-when-elided="true" name="imageRect" style="-unity-text-align: middle-left; font-size: 10px; color: rgba(210, 210, 210, 0.8);" />
+            <ui:VisualElement name="rects" style="justify-content: center; margin-left: 4px; opacity: 0.8;">
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="maskRect" style="-unity-text-align: middle-left; font-size: 10px;" />
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="imageRect" style="-unity-text-align: middle-left; font-size: 10px;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:Foldout text="Attributes" name="Foldout" style="margin-left: 27px; margin-top: -20px; color: rgba(210, 210, 210, 0.8);">
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="extra" binding-path="name" enable-rich-text="false" style="margin-left: 10px; font-size: 10px; color: rgba(210, 210, 210, 0.8); margin-bottom: 4px;" />
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="extra" binding-path="name" enable-rich-text="false" style="margin-left: 10px; font-size: 10px; margin-bottom: 4px; opacity: 0.8;" />
         </ui:Foldout>
     </ui:VisualElement>
     <ui:Foldout text="Layers" name="childLayers" style="margin-left: 26px; border-left-width: 1px; border-left-color: rgba(0, 0, 0, 0.2);" />
